@slidy/core - remove tabindex & dragstart on node

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -147,7 +147,7 @@
             <button id="dark" onclick="utils.activate(this, media.dark)">dark</button>
         </header>
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
-            <ul id="node">
+            <ul id="node" tabindex="0">
                 <!-- <li id="0"><img src="https://picsum.photos/id/10/1280/800.jpg" alt="alt" /></li>
                 <li id="1"><img src="https://picsum.photos/id/11/1280/800.jpg" alt="alt" /></li>
                 <li id="2"><img src="https://picsum.photos/id/12/1280/800.jpg" alt="alt" /></li>
