@slidy/core - indent option

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -92,6 +92,7 @@
                 gravity: 1.2,
                 duration: 375,
                 vertical: false,
+                indent: 0
             };
             window.position = 0;
             window.slidy = null;
