--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -86,13 +86,13 @@
             window.options = {
                 index: 6,
                 length: 13,
-                snap: 'center',
-                loop: false,
-                clamp: false,
                 gravity: 1.2,
                 duration: 375,
+                indent: 0,
+                loop: false,
+                clamp: false,
                 vertical: false,
-                indent: 0
+                snap: 'center',
             };
             window.position = 0;
             window.slidy = null;
