--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -51,7 +51,7 @@
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" href="dev.css" />
 
-        <title>Slidy 3.1.4 - NativeJS</title>
+        <title>Slidy 3.1.7 - NativeJS</title>
 
         <script type="module">
             import { slidy as slidyCore } from './build/core.js';
@@ -155,9 +155,15 @@
         <header>
             <img id="slidy-logo" alt="Slidy" width="50" height="50" src="assets/favicon.png" />
             <h3>
-                Slidy <span>3.1.4</span><sub>nativeJS</sub><sub id="stats" />
+                Slidy <span>3.1.7</span><sub>nativeJS</sub><sub id="stats" />
             </h3>
-            <button id="dark" onclick="utils.activate(this, media.dark)">dark</button>
+            <a href="https://github.com/Valexr/Slidy" id="github">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
+                        fill="currentColor" />
+                </svg>
+            </a>
         </header>
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
             <ul id="node" tabindex="0">
