--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -51,14 +51,17 @@
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" href="dev.css" />
 
-        <title>Slidy 3.1.7 - NativeJS</title>
+        <title id="title"></title>
 
         <script type="module">
             import { slidy as slidyCore } from './build/core.js';
             import { media as mediaStorage } from './build/media.js';
             import * as utils from './utils.js';
             import { getPhotos } from './api.js';
-            // import { media } from 'https://unpkg.com/@slidy/media@1.2.3/dist/index.mjs';
+
+            let version = '3.1.8';
+            title.innerText = `Slidy ${version} - NativeJS`;
+            header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
 
             const queries = {
                 xs: '(max-width: 480px)',
@@ -77,7 +80,6 @@
 
             const mediaQ = mediaStorage({ queries });
             mediaQ.subscribe((matches) => {
-                // console.log('m:', matches);
                 window.media = matches;
             });
 
@@ -167,9 +169,7 @@
     <body>
         <header>
             <img id="slidy-logo" alt="Slidy" width="50" height="50" src="assets/favicon.png" />
-            <h3>
-                Slidy <span>3.1.7</span><sub>nativeJS</sub><sub id="stats" />
-            </h3>
+            <h3 id="header"></h3>
             <a href="https://github.com/Valexr/Slidy" id="github">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
